垃圾收集超时导致oom 测试